--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js",
+    "start": "node --env-file ./.env dist/index.js",
+    "dev": "tsc && node --env-file ./.env dist/index.js",
     "clean": "rm -rf dist"
   },
   "keywords": [
@@ -22,7 +22,6 @@
   "dependencies": {
     "@azure/identity": "^4.5.0",
     "@azure/search-documents": "^12.2.0",
-    "dotenv": "^16.4.7",
     "openai": "^4.77.3"
   },
   "devDependencies": {
