--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/identity": "^4.5.0",
-    "@azure/search-documents": "^12.2.0",
-    "openai": "^4.77.3"
+    "@azure/search-documents": "^12.3.0-beta.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
