--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node --env-file ./.env dist/index.js",
     "dev": "tsc && node --env-file ./.env dist/index.js",
+    "upload": "tsc && node --env-file ./.env dist/upload.js",
     "clean": "rm -rf dist"
   },
   "keywords": [
