--- a/azure.yaml
+++ b/azure.yaml
@@ -28,4 +28,17 @@ hooks:
         Add-Content -Path .env -Value "UPLOAD_DOCS=true"
         Add-Content -Path .env -Value "CLEANUP_RESOURCES=false"
         Write-Host ".env file created successfully!"
+  postdown:
+    posix:
+      shell: sh
+      run: |
+        echo "Deleting .env file..."
+        rm -f .env
+        echo ".env file deleted successfully!"
+    windows:
+      shell: pwsh
+      run: |
+        Write-Host "Deleting .env file..."
+        Remove-Item -Path .env -Force -ErrorAction SilentlyContinue
+        Write-Host ".env file deleted successfully!"
 
