--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,7 @@
-# Azure Search Configuration
-AZURE_SEARCH_ENDPOINT=https://your-search-service.search.windows.net
+# Azure AI Search Configuration
+AZURE_SEARCH_ENDPOINT=https://<your-search-service-name>.search.windows.net
 
 # Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=https://your-ai-foundry-resource.openai.azure.com/
-AZURE_OPENAI_GPT_DEPLOYMENT=gpt-5-mini
-OPENAI_API_VERSION=2025-04-01-preview
-
+AZURE_OPENAI_ENDPOINT=https://<your-ai-foundry-resource-name>.openai.azure.com/
+AZURE_OPENAI_GPT_DEPLOYMENT=gpt-4o-mini
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-3-large
-AZURE_OPENAI_EMBEDDING_API_VERSION=2023-05-15
-# Optional: OpenAI API Version
-
